otros cambios experimentales en uno

--- a/cuatro.html
+++ b/cuatro.html
@@ -6,8 +6,6 @@
 	<title></title>
 </head>
 <body>
-	<h1>fichero UNO</h1>
-	<h2>cambio experimental</h>
-
+	<h2>fichero cuatro</h2>
 </body>
 </html>
